--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 .back-img{
     width: 100%;
-    height: 635px;
+    height: 100%;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
