--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@
     width: 250px;
     height: 150px;
     animation: car 12s linear infinite;
+    padding-top: 60px;
 }
 /* keyframes animation */
 @keyframes sun{
