--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
     width: 250px;
     height: 150px;
     animation: car 12s linear infinite;
-    padding-top: 60px;
+    margin-top: 95px;
 }
 /* keyframes animation */
 @keyframes sun{
